--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "inotebook-backend",
+  "name": "inotebook_backend",
   "version": "1.0.0",
-  "description": "iNotebook - Your notebook on the cloud",
+  "description": "multiple user can create own notebook and access them",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,12 +12,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
+    "nodemon": "^2.0.22"
   }
 }
